# ai-eng-bootcamp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  render.yaml
app/: config.py  models.py
app/routes/: health.py
prompts/: analyze_sentiment.txt  summarize.txt
tests/: test_validation.py
week1/app/: dependencies.py  main.py
week1/app/routes/: sentiment.py  summarize.py
week1/app/services/: anthropic_service.py
week1/prompts/: analyze_sentiment.txt
week1/tests/: test_e2e.py  test_health.py  test_models.py
week2/: .env.example  README.md  pyproject.toml  rag.py
week2/tests/: conftest.py  helpers.py  test_chunking.py  test_e2e.py  test_loading.py  test_retrieval.py
week3/: .env.example  README.md  pyproject.toml
week3/hat_store_agent/: __init__.py  agent.py
week3/hat_store_agent/.adk/: session.db
week3/prompts/: billing_agent.txt  order_status_agent.txt  returns_agent.txt  root_agent.txt
week3/returns_service/: agent.py  tools.py
week3/sql/: 01_create_tables.sql  02_seed_data.sql
week3/tests/: conftest.py  test_evals.py  test_integration_returns.py  test_return_tools.py  test_scenarios.py
