[project]
name = "ai-eng-bootcamp"
version = "0.1.0"
description = "Coursework for the AI Eng Bootcamp Maven course"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "anthropic>=0.90.0",
    "pydantic-settings>=2.7.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.10.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S104"]  # binding to 0.0.0.0 is fine for container deploys

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests
"app/routes/**" = ["B008"]  # Depends() in default args is standard FastAPI

[tool.pytest.ini_options]
asyncio_mode = "auto"
